<resources>
    <string name="app_name">AdsFinder</string>
    <string name="app_slogan">Kết nối quảng cáo hiệu quả</string>
    <string name="register">Đăng ký</string>
    <string name="login">Đăng nhập</string>
    <string name="login_fail">Tài khoản đăng nhập không đúng</string>
    <string name="email_empty">Email không được rỗng</string>
    <string name="email_syntax_error">Email lỗi định dạng</string>
    <string name="password_empty">Mật khẩu không được rỗng</string>
    <string name="password_short">Mật khẩu phải trên 6 ký tự</string>
    <string name="error_request">Lỗi kết nối</string>
    <string name="title_registration">Chào mừng bạn đến với AdsFinder</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Mật khẩu</string>
    <string name="confirm_password_hint">Xác thực mật khẩu</string>
    <string name="show_password">Hiển thị mật khẩu</string>
    <string name="hide_password">Ẩn mật khẩu</string>
    <string name="confirm_password_failure">Mật khẩu không khớp</string>
    <string name="register_fail">Tài khoản này đã tồn tại</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_saved">Đã lưu</string>
    <string name="menu_user_profile">Thông tin cá nhân</string>
    <string name="menu_sign_out">Đăng xuất</string>
    <string name="menu_share">Chia sẻ</string>
    <string name="menu_send">Gửi</string>
    <string name="menu_communicate">Communicate</string>
    <string name="menu_home">Trang chủ</string>
    <string name="menu_here">Gần đây</string>
    <string name="menu_notification">Thông báo</string>
    <string name="search">Tìm kiếm địa điểm</string>
    <string name="place_size">Kích thước</string>
    <string name="place_unit">m2</string>
    <string name="updating">Đang cập nhật</string>
    <string name="place_detail_screen">Thông tin chi tiết</string>
    <string name="picture">Ảnh</string>
    <string name="description">Mô tả</string>
    <string name="address">Địa chỉ</string>
    <string name="date_created">Ngày tạo</string>
    <string name="price">Giá</string>
    <string name="total_price">Tổng giá</string>
    <string name="separate">: </string>
    <string name="save_place_success">Đã lưu</string>
    <string name="save_place_failure">Địa điểm này đã được lưu</string>
    <string name="remove_place_success">Đã bỏ lưu</string>
    <string name="remove_place_failure">Địa điểm này đã được xóa</string>
    <string name="place_width">Chiều dài (0–20m)</string>
    <string name="place_height">Chiều rộng (0–20m)</string>
    <string name="place_aria">Diện tích</string>
    <string name="menu_call">Gọi điện</string>
    <string name="menu_contract">Hợp đồng</string>
    <string name="start_date">Ngày bắt đầu</string>
    <string name="end_date">Ngày kết thúc</string>
    <string name="note">Ghi chú</string>
    <string name="place_info">Thông tin địa điểm:</string>
    <string name="place_code">Mã địa điểm</string>
    <string name="customer_code">Mã khách hàng</string>
    <string name="customer_info">Thông tin khách hàng:</string>
    <string name="customer_name">Tên khách hàng</string>
    <string name="contract_info">Thông tin thuê:</string>
    <string name="poster_type">Loại Poster</string>
    <string name="poster_type_1">Poster dán tường</string>
    <string name="poster_type_2">Poster vẽ tường</string>
    <string name="poster_type_3">Poster điện tử</string>
    <string name="wall_type">Loại tường</string>
    <string name="wall_type_1">Tường quán cà phê</string>
    <string name="wall_type_2">Bảng tin, tường khu dân cư, đô thị</string>
    <string name="wall_type_3">Bảng tin, tường khu văn phòng</string>
    <string name="price_limit">Từ 0–10tr: </string>
    <string name="action_search">Tìm kiếm</string>
    <string name="price_unit">tr</string>
    <string name="search_result">Kết quả tìm kiếm</string>
    <string name="access_token">pk.eyJ1IjoiYm5oIiwiYSI6ImNqdnp6amZ0cTA1ZGY0YW52d2JyMmVxbWQifQ.OG2DHeoMhNhjYOfQ1LZGlA</string>
    <string name="user_location_permission_explanation">Ứng dụng cần quyền truy cập vị trí để hiển thị chức năng</string>
    <string name="user_location_permission_not_granted">Bạn đã không cấp quyền vị trí</string>
    <string name="menu_direction">Chỉ đường</string>
    <string name="place_save_screen">Địa điểm đã lưu</string>
</resources>
