<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_like"
            android:icon="@drawable/ic_like"
            android:title="@string/menu_saved" />
        <item
            android:id="@+id/nav_contract"
            android:icon="@drawable/ic_contract"
            android:title="@string/menu_contract" />
        <item
            android:id="@+id/nav_user_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_user_profile" />
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_sign_out" />
    </group>

    <item android:title="@string/menu_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_send"
                android:title="@string/menu_send" />
        </menu>
    </item>
</menu>
