<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image_background"
    android:padding="@dimen/dp_16"
    tools:context=".ui.login.LoginActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textAppName"
        style="@style/AppName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_hz1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textAppSlogan"
        style="@style/AppSlogan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_4"
        android:text="@string/app_slogan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textAppName" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textUserEmail"
        style="@style/InputLogin"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_48"
        android:hint="@string/email_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_hz2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editUserEmail"
            style="@style/InputLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dp_8"
            android:background="@null"
            android:inputType="textEmailAddress"
            android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textUserPassword"
        style="@style/InputLogin"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_48"
        android:layout_marginTop="@dimen/dp_16"
        android:hint="@string/password_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textUserEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editUserPassword"
            style="@style/InputLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dp_8"
            android:background="@null"
            android:inputType="textPassword"
            android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonLogin"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_48"
        android:background="@color/color_primary"
        android:gravity="center"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_hz3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonRegister"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_48"
        android:background="@color/color_primary_dark"
        android:gravity="center"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progressLogin"
        style="?android:attr/progressBarStyleLargeInverse"
        android:layout_width="@dimen/dp_48"
        android:layout_height="@dimen/dp_48"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hz1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hz2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hz3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

</androidx.constraintlayout.widget.ConstraintLayout>
